# PDE_Diffusion

./: .gitignore  README.md  core.1824752  open_data.py  pyproject.toml  requirements.txt  submit.sh  tasks.py
configs/: config.yaml  evaluate.yaml
configs/dataset/: cifar10.yaml  darcy.yaml  dataset1.yaml  era5.yaml  era5_full.yaml
configs/experiment/: era5_baseline.yaml  era5_clean_hp.yaml  era5_clean_hp2.yaml  era5_clean_hp2_10e.yaml  era5_clean_hp2_50e.yaml  era5_clean_hp3.yaml  era5_clean_hp3_10e.yaml  era5_clean_hp3_50e.yaml  era5_clean_hp_30e.yaml  era5_ext.yaml  era5_ext_50e.yaml  exp1.yaml  tiny.yaml
configs/hp_study/: era5_hp.yaml  era5_hp_3d.yaml  era5_hp_3d_2.yaml  era5_hp_3d_4.yaml
configs/scheduler/: ddpm.yaml
src/pde_diff/: callbacks.py  custom_style.mplstyle  darcy_data_generation.py  data.py  evaluate.py  hyperparam_tuning.py  loss.py  model.py  plot_forecast_losses.py  scheduler.py  testing_shit.py  train.py  unet_model.py  utils.py  visualize.py  visualize_eval.py  visualize_hp.py
src/pde_diff/data/: compute_const.py  const.py  darcy_data_generation.py  datasets.py  download_data.py  normalize_loss.py  plot_data_distribution.py  plot_uncertainty.py  residual_stats.json  utils.py
tests/: test_data.py  test_model.py  test_scheduler.py
